<resources>
    <string name="app_name">Moment</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_moment">Moment</string>
    <string name="connection">Connection</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="title_activity_creation">CreationActivity</string>
    <string name="title_activity_moment_infos">MomentInfo</string>
    <string name="title_activity_fragment_infos">FragmentInfos</string>
    <string name="title_activity_facebook_events">FacebookEvents</string>
    <string name="creation_moment">CRÉEZ UN MOMENT</string>
    <string name="edit_nom_moment">NOM DU MOMENT</string>
    <string name="import_facebook">IMPORTER DEPUIS FACEBOOK</string>
    <string name="alert_nom_creation_moment">Veuillez rentrer un nom afin de créer un moment</string>
    <string name="title_activity_creation_details">CreationDetailsActivity</string>
    <string name="step_creation_1">Step 1/3</string>
    <string name="creation_info_lieu_label">ndiquez des infos sur le lieu :</string>
    <string name="creation_info_lieu_edit">NOM DU LIEU</string>
    <string name="crea_text_adresse">dresse du lieu :</string>
    <string name="edit_adresse">Adresse</string>
    <string name="edit_adresse_code_postale">CODE POSTAL</string>
    <string name="edit_adresse_ville">VILLE</string>
    <string name="creation_text_home">HOME</string>
    <string name="creation_text_amis">AMIS</string>
    <string name="creation_text_info_lieu">NFO LIEU</string>
    <string name="fl_creation_text_info_lieu">I</string>
    <string name="creation_edit_etage">ETAGE, DIGICODE, ...</string>
    <string name="fl_creation_text_info_transport">I</string>
    <string name="creation_text_info_transport">NFO TRANSPORT</string>
    <string name="creation_edit_adresse_info_transport">METRO, BUS, TRAMWAY, KAYAK, ...</string>
    <string name="spinner_date_debut">DATE DE DÉBUT</string>
    <string name="spinner_date_fin">DATE DE FIN</string>
    <string name="spinner_heure">HEURE</string>
    <string name="step_creation_2">STEP 2/3</string>
    <string name="step_creation_3">STEP 3/3</string>
    <string name="edit_description">DESCRIPTION</string>
    <string name="fl_photos_temps_reel">P</string>
    <string name="photos_temps_reel">HOTOS EN TEMPS RÉEL</string>
    <string name="fl_hashtag">H</string>
    <string name="hashtag">ASHTAG</string>
    <string name="edit_hashtag">#NOM</string>
    <string name="explication_hashtag">TOUTES LES PHOTOS AJOUTÊES SUR CES PLATEFORMES AVEC CE #HASHTAG SERONT AUTOMATIQUEMENT AJOUTÊES Á VOTRE MOMENT.</string>
    <string name="btn_creer_moment">RÉER LE MOMENT</string>
    <string name="fl_btn_creer_moment">C</string>
    <string name="text_picto_when">UAND </string>
    <string name="fl_text_picto_when">Q</string>
    <string name="text_picto_where">U </string>
    <string name="fl_text_picto_where">O</string>
    <string name="string_interrogation"> \?</string>
    <string name="text_picto_what">UOI</string>
    <string name="fl_text_picto_what">Q</string>
    <string name="fl_creation_info_lieu_label">I</string>
    <string name="fl_crea_text_adresse">A</string>
    <string name="log_in_fb">OG IN WITH FACEBOOK</string>
    <string name="fl_log_in_fb">L</string>
    <string name="fl_log_in_connection">S</string>
    <string name="log_in_connection">E CONNECTER</string>
    <string name="fl_log_in_inscription">S</string>
    <string name="log_in_inscription">\'INSCRIRE</string>
    <string name="infos_moment_invites">invités</string>
    <string name="fl_detail_par">\P</string>
    <string name="detail_par">\AR</string>
    <string name="title_activity_detail_photo">DetailPhoto</string>
    <string name="title_activity_profil">ProfilActivity</string>
    <string name="save_photo">Photo enregistrée</string>
    <string name="delete_photos_title">Suppression Photo</string>
    <string name="delete_photos_body">Voulez vous vraiment supprimer cette photo ? Cette action est irreversible !</string>
    <string name="fail_delete_photo">Echec de la suppresion de la photo</string>
    <string name="btn_amis">AMIS</string>
    <string name="btn_photos">PHOTOS</string>
    <string name="btn_moments">MOMENTS</string>
    <string name="btn_badges">BADGES</string>
    <string name="btn_stats">STATS</string>
    <string name="btn_infos">INFOS</string>
    <string name="fl_invitations">I</string>
    <string name="invitations">NVITATIONS</string>
    <string name="fl_notifications">N</string>
    <string name="notifications">OTIFICATIONS</string>
    <string name="title_activity_inscription">InscriptionActivity</string>
    <string name="creation_moment_step_1">ETAPE 1/2</string>
    <string name="creation_moment_change_image">Changer la cover</string>
    <string name="creation_moment_step_2">ETAPE 2/2</string>
    <string name="creation_moment_description_evenement">Description de l\'évènement</string>
    <string name="creation_moment_adresse">Lieu</string>
    <string name="creation_moment_infos_lieu">Infos lieu</string>
    <string name="creation_moment_description_hashtag">Toutes les photos ajoutées sur ces plateformes avec ce #HASHTAG seront automatiquement récupérées.</string>
    <string name="next_step">Prochaine étape</string>
    <string name="previous_step">Etape précédente</string>
    <string name="valider">Créer</string>
    <string name="title_activity_invitation">InvitationActivity</string>
    <string name="title_activity_invitations_fragment">InvitationsFragment</string>
	<string name="app_id">445031162214877</string>
    <string name="dev_app_id">539966336039230</string>
    <string name="pop_up_end_import_fb"> evènements importés </string>
    <string name="custome_loc">Votre localisation</string>
    <string name="dialog_import_fb">Récupération des évènements Facebook</string>
    <string name="incorrect_date_title">Dates Incorrectes</string>
    <string name="incorrect_date_body">Vérifiez que la date de fin est supérieure à celle de début</string>
    <string name="creation_progress">Création du Moment en cours</string>
    <string name="modification_progress">Modification du Moment en cours</string>
    <string name="select_source">Choisir la source</string>
   <string name="problem_creation">Problème lors de la création du Moment</string>
    <string name="problem_modif">Problème lors de la modification du Moment</string>
    <string name="congrats">félicitations</string>
    <string name="just_create">Tu viens de créer un moment !</string>
    <string name="explanations_invit">Il ne te reste plus qu\'à inviter des amis à y participer.</string>
    <string name="invits_can_invit">Les invités peuvent convier des amis</string>
    <string name="invit_button">Inviter des amis</string>
    <string name="expl_moment_public">Tout le monde peut voir ce moment</string>
    <string name="expl_moment_visible">Les personnes qui te suivent peuvent voir ce moment</string>
    <string name="expl_moment_private">Les invités peuvent voir ce moment</string>
    <string name="label_visible">Visible :</string>
    <string name="label_public">Public :</string>
    <string name="label_private">Privé :</string>
    <string name="title_maybe">PEUT-ÊTRE</string>
    <string name="title_coming">PRESENTS</string>
    <string name="title_unknown">NON REPONDUS</string>
    <string name="rsvp_coming">Je serai présent au Moment</string>
    <string name="rsvp_not_coming">Je ne serai pas présent au Moment</string>
    <string name="rsvp_maybe">Je ne sais pas si je serai présent au Moment</string>
    <string name="delete_moment">Supprimer ce Moment</string>
    <string name="add_photos_infos">Ajouter des photos</string>
    <string name="error_delete">Erreur lors de la suppression du Moment</string>
    <string name="title_pop_up_delete">Suupression du Moment</string>
    <string name="pop_up_delete">Etes vous sur de vouloir supprimer ce Moment ? Cette action est irreversible</string>
    <string name="error_dl_moment">Erreur lors du téléchargement du moment</string>
    <string name="update_moment_success">Moment mise à jour</string>
    <string name="impossible_get_moment">Impossible de récupérer le Moment</string>
    <string name="share_moment">Partager ce Moment</string>
    <string name="my_moments_volet">Mes Moments</string>
    <string name="news_volet">Actualités</string>
    <string name="profil_volet">Mon Profil</string>
    <string name="settings_volet">Paramètres</string>
    <string name="missing_moments_volet">Moments Manquants ?</string>
    <string name="notif_photo">Nouvelle(s) photo(s) sur le moment : </string>
    <string name="notif_message">Nouveau(x) chat sur le moment : </string>
    <string name="param_invitation">Invitation à un moment </string>
    <string name="param_publication">Publication d\'une photo </string>
    <string name="param_message">Nouveau message </string>
    <string name="param_modif">Modification moment </string>
    <string name="param_tuto">Voir le tutoriel </string>
    <string name="param_profil">Modifier mon profil </string>
    <string name="param_logout">Déconnexion </string>
    <string name="param_version">Version de l\'application : 1.0 </string>
    <string name="param_cgu">Consulter les CGU </string>
    <string name="param_contact">Nous contacter </string>
    <string name="param_feedback">Feedback </string>
    <string name="modif_cover">Modifier la cover</string>
    <string name="modif_pass_good">Mot de passe modifié</string>
    <string name="modif_pass_failed">Echec de la modification du mot de passe</string>
    <string name="modif_pop_up_title">Informations utilisateur</string>
    <string name="modif_pop_up_body">Modification en cours</string>
    <string name="invalid_mail">Adresse email invalide</string>
    <string name="error_modif_profil">Une erreur s\'est produite</string>
    <string name="link_fb">Compte Facebook lié</string>
    <string name="notifs_vide">Aucune notification pour le moment :( \n\n Des vacances, un voyage, une soirée ? Pensez à créer un moment pour l\'organiser et partager toutes les photos avec vos amis</string>
    <string name="invits_vide">Aucune invitation pour l\'instant.</string>
    <string name="titre_pop_up_no_invite">Aucune personne selectionnée</string>
    <string name="pop_up_no_invite">Veuillez selectionner des personnes dans vos contacts afin de les inviter à ce Moment</string>
    <string name="no_favorites">Aucun contact dans favoris pour le moment. Au bout de quelques évènements, vous verrez automatiquement apparaitre les personnes qui vous sont proches</string>
    <string name="echec_dl_moments">Echec du téléchargement des Moments</string>
    <string name="past">Passé</string>
    <string name="present">Présent</string>
    <string name="futur">Futur</string>
    <string name="moment_dl">Téléchargement des Moments</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="ok">Ok</string>
    <string name="invalid_phone">Numéro de téléphone invalide</string>
    <string name="second_invalid_phone">Numéro de téléphone invalide</string>
    <string name="get_informations">Récupération des informations</string>
    <string name="no_network_connection_toast">Pas de connection à internet trouvée</string>
    <string name="default_text_chat">Aucun message pour le moment, alors allez y, lancez vous ! Une blague, une info, un scoop, ce chat est fait pour ça !</string>
    <string name="default_button_photos">Ajoutez des photos !</string>
    <string name="partage_photo_facebook_titre">Partage Facebook</string>
    <string name="partage_photo_facebook_text1">Photo prise lors de l\'évènement </string>
    <string name="partage_photo_facebook_text2"> #appmoment</string>
    <string name="partage_photo_twitter_text2"> appmoment</string>
    <string name="pb_get_photos">Problème lors de la régupération des photos</string>
</resources>