<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/black_detail_photo_trans">
    <RelativeLayout android:layout_width="304dp"
                    android:layout_height="301dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/pop_back">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignParentTop="true"
                  android:text="@string/congrats"
                  android:layout_centerHorizontal="true"
                  android:layout_marginTop="10dp"
                  android:textSize="20dp"
                  android:textColor="@color/orange"/>
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_centerInParent="true"
                      android:orientation="vertical"
                      android:gravity="center">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textAllCaps="true"
                      android:text="@string/just_create"
                      android:textColor="@color/gris_texte"
                      android:layout_marginBottom="0dp"/>
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/pop_bulle"
                       android:layout_gravity="center"
                       android:layout_marginTop="7dp"
                       android:layout_marginBottom="7dp"/>
            <TextView android:layout_width="wrap_content"
                      android:maxWidth="200dp"
                      android:layout_height="wrap_content"
                      android:minLines="2"
                      android:maxLines="2"
                      android:layout_gravity="center"
                      android:gravity="center"
                      android:text="@string/explanations_invit"
                      android:textAllCaps="true"
                      android:textColor="@color/gris_texte"
                      android:textSize="10dp"
                      android:layout_marginBottom="5dp"/>
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_marginBottom="5dp">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAllCaps="true"
                          android:textColor="@color/gris_texte"
                          android:text="@string/invits_can_invit"
                          android:textSize="10dp"
                          android:layout_marginRight="10dp"/>
                <ToggleButton android:id="@+id/toggle_invit"
                              android:layout_width="69dp"
                              android:layout_height="37dp"
                              android:background="@drawable/toggle_btn"
                              android:textColor="@android:color/transparent"
                              android:textOn="On"
                              android:textOff="Off"
                              android:onClick="invitChange"/>
            </LinearLayout>
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pop_btn_inviteup"
                    android:layout_gravity="center"
                    android:text="@string/invit_button"
                    android:textColor="@color/gris_texte"
                    android:onClick="inivitFriends"
                    android:layout_marginBottom="8dp"/>
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_gravity="center">
                <TextView android:id="@+id/label_type_privacy"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/label_visible"
                          android:textColor="@color/orange"
                          android:textSize="10dp"
                          android:layout_marginRight="5dp"/>
                <TextView android:id="@+id/content_type_privacy"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/expl_moment_visible"
                          android:textSize="10dp"
                          android:textColor="@color/gris_texte"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_alignParentBottom="true"
                      android:layout_marginLeft="2dp"
                      android:layout_marginRight="3dp">
            <ImageButton android:id="@+id/pop_up_public_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pop_up_left_btn"
                    android:src="@drawable/picto_public_up"
                    android:onClick="clickPublic"/>
            <ImageButton android:id="@+id/pop_up_visible_btn"
                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/pop_up_middle_btn"
                         android:src="@drawable/picto_friend_down"
                         android:onClick="clickVisible"/>
            <ImageButton android:id="@+id/pop_up_private_btn"
                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/pop_up_right_btn"
                         android:src="@drawable/picto_lock_up"
                         android:onClick="clickPrivate"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>