<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="19" >

    <RelativeLayout 
        android:layout_width="fill_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_height="0dp"
        android:layout_weight="9">
         <Button
            android:id="@+id/button_facebook"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/btn_facebook_import"
            android:scaleType="fitCenter"
	        android:layout_centerInParent="true"
	        android:textSize="13sp"
	        android:gravity="left"
	        android:paddingLeft="20dp"
	        android:paddingTop="12dp"
	        android:textColor="@color/gris_texte"
	        android:text="@string/import_facebook"
	        android:onClick="facebook"/>
    </RelativeLayout>
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
         <LinearLayout android:layout_width="fill_parent"
            android:layout_height="12dp"
            android:orientation="horizontal"
            android:weightSum="13"
            android:gravity="center">
            <ImageView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/separation_point"
                android:layout_weight="6"/>
            <TextView android:text="OU"
                android:textSize="10dp"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"/>
             <ImageView android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/separation_point"
                        android:layout_weight="6"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_weight="9">
         <TextView 
             android:id="@+id/text_creation_moment"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:paddingTop="60dp"
             android:layout_marginBottom="20dp"
             android:textSize="13sp"
             android:gravity="center"
             android:textColor="@color/gris_texte"
             android:text="@string/creation_moment"/>
         <LinearLayout android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/text_creation_moment"
             android:orientation="horizontal"
             android:paddingRight="10dp"
             android:weightSum="10"
             android:gravity="right">
             <EditText android:id="@+id/edit_nom_moment"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
		        android:textSize="13sp"
		        android:hint="@string/edit_nom_moment"
		        android:singleLine="true"
		        android:layout_weight="9"/>
	         <Button
		        android:layout_width="43dp"
		        android:layout_height="43dp"
				android:background="@drawable/btn_valide"
		        android:onClick="valideNom"/>
         </LinearLayout>
         
    </RelativeLayout>
</LinearLayout>
